modification on header for reponsiveness

--- a/sortify-frontend/src/App.css
+++ b/sortify-frontend/src/App.css
@@ -47,7 +47,7 @@
 }
 
 /* Main Content */
-.App-header {  
+/*.App-header {  
   padding: 40px 20px;  
   border-radius: 20px;  
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);  
